fix layout align

--- a/front/src/app/pages/home/components/weather-highlights/weather-highlights.component.scss
+++ b/front/src/app/pages/home/components/weather-highlights/weather-highlights.component.scss
@@ -11,7 +11,7 @@
       background-color: #636a78;
       color: white;
       text-align: center;
-      width: 30%;
+      width: 28.5%;
       margin-bottom: 20px;
       height: 190px;
       max-height: 40%;
@@ -25,11 +25,10 @@
           height: 20%;
           text-align: left;
           font-size: 20px;
-          margin-left: 20px;
         }
         .highlight-item-content {
           display: flex;
-          justify-content: space-around;
+          justify-content: space-between;
           align-items: center;
           margin: 15px 0;
           height: 80%;
